--- a/.gitignore
+++ b/.gitignore
@@ -186,7 +186,7 @@ cython_debug/
 #  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
 #  and can be added to the global gitignore or merged into this file. However, if you prefer, 
 #  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+.vscode/
 
 # Ruff stuff:
 .ruff_cache/
@@ -202,9 +202,8 @@ __marimo__/
 # Streamlit
 .streamlit/secrets.toml
 
-# Local development files
-.vscode/
 
 # Project specific directories
 .config/
 .log/
+captured_images/
