加入串口通信模块

--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,6 @@ dependencies:
       - pyserial
       - nicegui
       - asyncio
-      - pyee
+      - pyserial-asyncio
       - psutil
       - Pillow
