--- a/communicate/protocol/variables.yaml
+++ b/communicate/protocol/variables.yaml
@@ -41,6 +41,24 @@ variables:
   - name: base_stop               # 停止移动, True表示停止
     vtype: BOOL
 
+
+  - name: debug_left_front_wheel_pwm   # 左前轮PWM速度
+    vtype: U16
+  - name: debug_left_front_wheel_dir   # 左前轮方向
+    vtype: U8
+  - name: debug_right_front_wheel_pwm  # 右前轮PWM速度
+    vtype: U16
+  - name: debug_right_front_wheel_dir  # 右前轮方向
+    vtype: U8
+  - name: debug_left_rear_wheel_pwm    # 左后轮PWM速度
+    vtype: U16
+  - name: debug_left_rear_wheel_dir    # 左后轮方向
+    vtype: U8
+  - name: debug_right_rear_wheel_pwm   # 右后轮PWM速度
+    vtype: U16
+  - name: debug_right_rear_wheel_dir   # 右后轮方向
+    vtype: U8
+
   # --- 机械臂相关 ---
   - name: gripper_tag_x   # tag相对机械爪的x, 单位：m
     vtype: F32
@@ -48,24 +66,36 @@ variables:
     vtype: F32
   - name: gripper_tag_z   # tag相对机械爪的z, 单位：m
     vtype: F32
-   
-  - name: gripper_init         # 机械爪初始化
+
+  - name: arm_reset         # 机械臂初始位置
     vtype: BOOL
-  - name: gripper_init_to_ready   # 机械爪从初始位置移动到抓取位置
+  - name: arm_reset_to_prepare   # 机械臂从初始位置移动到准备位置
     vtype: BOOL
-  - name: gripper_grasp_dart    # 抓取
+  - name: arm_grasp_dart    # 抓取
     vtype: BOOL
-  - name: gripper_load_dart     # 从抓取到装填，再回到初始位置
+  - name: arm_load_dart     # 从抓取到装填，再回到初始位置
     vtype: BOOL
 
-  - name: gripper_ready         # 机械爪复位
-    vtype: BOOL
-  - name: gripper_relax        # 机械爪放松
+  - name: arm_relax        # 机械臂放松
     vtype: BOOL
 
-  - name: gripper_grasp_debug      # 机械爪抓取调试，True表示执行抓取动作
+  # --- 机械臂关节调试变量 ---
+  - name: debug_arm_di_pwm         # 底座关节PWM值 (250-1250)
+    vtype: U16
+  - name: debug_arm_dabi_pwm       # 大臂关节PWM值 (250-1250)
+    vtype: U16
+  - name: debug_arm_zhongbi_pwm    # 中臂关节PWM值 (250-1250)
+    vtype: U16
+  - name: debug_arm_xiaobi_pwm     # 小臂关节PWM值 (250-1250)
+    vtype: U16
+  - name: debug_arm_shouwan_pwm    # 手腕关节PWM值 (250-1250)
+    vtype: U16
+  - name: debug_arm_gripper_pwm    # 夹爪PWM值 (250-1250)
+    vtype: U16
+
+  - name: debug_gripper_grasp      # 机械爪抓取调试，True表示执行抓取动作
     vtype: BOOL
-  - name: gripper_release_debug    # 机械爪放开调试，True表示执行放开动作
+  - name: debug_gripper_release    # 机械爪放开调试，True表示执行放开动作
     vtype: BOOL
 
   # --- 发射相关 ---
@@ -74,20 +104,20 @@ variables:
   - name: fire_once         # 发射飞镖, 复合指令
     vtype: BOOL
 
-  - name: dart_push_once_debug         # 推进飞镖向前,然后回到原位
+  - name: debug_dart_push_once         # 推进飞镖向前,然后回到原位
     vtype: BOOL
-  - name: dart_push_forward_debug           # 推进飞镖向前
+  - name: debug_dart_push_forward           # 推进飞镖向前
     vtype: BOOL
-  - name: dart_push_backward_debug         # 推进飞镖向后
+  - name: debug_dart_push_backward         # 推进飞镖向后
     vtype: BOOL
-  - name: dart_push_stop_debug             # 停止推进飞镖
+  - name: debug_dart_push_stop             # 停止推进飞镖
     vtype: BOOL
-  - name: dart_push_reset_debug            # 推进飞镖复位
+  - name: debug_dart_push_reset            # 推进飞镖复位
     vtype: BOOL
 
-  - name: friction_wheel_start_debug  # 启动摩擦轮，True表示启动摩擦轮
+  - name: debug_friction_wheel_start  # 启动摩擦轮，True表示启动摩擦轮
     vtype: BOOL
-  - name: friction_wheel_stop_debug   # 停止摩擦轮，True表示停止摩擦轮
+  - name: debug_friction_wheel_stop   # 停止摩擦轮，True表示停止摩擦轮
     vtype: BOOL
 
     
